corpus/member_access.txt
==============
Function member access
==============

class TestClass
{
	int GetStringLength()
	{
		string s = "123";
		int len = s.Length();
		return len;
	}
}

---

(source_file
	(class_definition
		name: (identifier)
		(method_declaration
			type: (predefined_type)
			name: (identifier)
			(parameter_list)
			(block
				(declaration_statement
					type: (predefined_type)
					(assignment_expression
						left: (identifier)
						right: (string_literal)))
				(declaration_statement
					type: (predefined_type)
					(assignment_expression
						left: (identifier)
		                right: (function_expression
		                  function: (member_access_expression
		                    (identifier)
		                    member: (identifier)))))
				(return_statement
					(identifier))))))
